--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Hiromi VARNIER",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
