--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.38.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.4",
     "react-router-bootstrap": "^0.25.0",
