--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,14 @@ node_modules
 node_modules/
 /.pnp
 .pnp.js
-uploads
-uploads/
 
 # testing
 /coverage
 
 # production
 /frontend/build
+/uploads/file.txt
+/uploads/*.jpg
 
 # misc
 .DS_Store
